# rabbitMQCleanerCPP

./: .gitignore  CMakeLists.txt  COMO_COMPILAR.md  COMO_CRIAR_RELEASE.md  INSTALACAO.md  LICENSE  PUBLICACAO.md  README.md  README_GITHUB.md  build.bat  build.ps1  create_release.ps1  install.ps1  install_and_build.ps1  rabbitmq-cleaner.json
release/rabbitmq-cleaner-2.0.0-win64/: README.md  VERSION.txt
src/: main.cpp
